--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  body: MyText
+  id: 1
+  title: Article 1
+  body: This is the first article
 
 two:
-  title: MyString
-  body: MyText
+  id: 2
+  title: Article 2
+  body: This is the second article
